--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,28 @@ h6,
   font-weight: 700;
   color: var(--dark);
 }
+.glow h1 {
+  width: 150px;
+  height: 150px;
+  background-color: #fff;
 
+  box-shadow: 120px 80px 40px 20px #0ff;
+  /* in order: x offset, y offset, blur size, spread size, color */
+  /* blur size and spread size are optional (they default to 0) */
+}
+.glow h1 {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow:
+    0 0 60px 30px #fff,  /* inner white */
+    0 0 100px 60px #ff0000, /* middle magenta */
+    0 0 140px 90px #092032; /* outer cyan */
+    0 0 140px 90px  #516171;  /* outer cyan */
+
+}
+}
 .bg-cover {
   background-size: cover;
   background-position: center;
